force-app/main/default/objects/Risk_Case__c/Risk_Case__c.object-meta.xml
<CustomObject>
    <label>Risk Case</label>
    <nameField>
        <label>Risk Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>