force-app/main/default/objects/Risk_Case__c/fields/Assigned_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risk_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>