force-app/main/default/objects/Risk_Case__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Household__c</referenceTo>
    <relationshipLabel>Risk Cases</relationshipLabel>
    <relationshipName>Risk_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>