force-app/main/default/objects/Risk_Case__c/fields/Risk_Reason_Summary__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason_Summary__c</fullName>
    <label>Risk Reason Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>