force-app/main/default/objects/Risk_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Confirmed Fraud</fullName>
            </value>
            <value>
                <fullName>False Positive</fullName>
            </value>
            <value>
                <fullName>Needs More Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>